
2016-12-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* runtime.conf: FR #191 added COB_EXIT_WAIT and COB_EXIT_MSG

2016-12-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* acu.conf, mf.conf: removed CONSOLE as it is internally used as
	  mnemonic device and therefore should not be in reserved list
	* mf.conf: added COMMAND-LINE as it is in parser

2016-11-19  Edward Hart <edward.dan.hart@gmail.com>

	* general: added use-for-debugging config option.

2016-10-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: feature-request #179 added reference-out-of-declaratives option

2016-10-02  Edward Hart <edward.dan.hart@gmail.com>

	* general: added no-echo-means-secure option
	* acu.conf: added aliases for ACCEPT/DISPLAY clauses

2016-09-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: feature-request #173 added pic-length configuration option

2016-08-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: added national-literals, hexadecimal-national-literals and
	  hexadecimal-boolean configuration options

2016-08-13  Frank Swarbrick <infocat@@users.sf.net>

	* ibm.conf, mf.conf: patch #50 added UNBOUNDED as context sensitive keyword

2016-08-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: renamed relaxed-syntax-check to relax-syntax-checks
	  for supporting the removed -frelax-syntax when set on command line

2016-08-09  Edward Hart <edward.dan.hart@gmail.com>

	* general: added program-name-redefinition and program-prototypes
	  configuration options.

2016-07-27  Edward Hart <edward.dan.hart@gmail.com>

	* general: added renames-uncommon-levels configuration option.

2016-07-18  Edward Hart <edward.dan.hart@gmail.com>

	* general: added accept-display-extensions and console-is-crt
	  configuration options.

2016-06-14  Edward Hart <edward.dan.hart@gmail.com>

	* general: moved uncommon aliases from reserved.c to config files.
