@@ -157,7 +157,10 @@ CB_CONFIG_SUPPORT (cb_goto_statement_without_name, "goto-statement-without-name"
 	_("GOTO statement without name"))
 
 CB_CONFIG_SUPPORT (cb_stop_literal_statement, "stop-literal-statement",
-	_("STOP-LITERAL statement"))
+	_("STOP-literal statement"))
+
+CB_CONFIG_SUPPORT (cb_stop_identifier_statement, "stop-identifier-statement",
+	_("STOP-identifier statement"))
 
 CB_CONFIG_SUPPORT (cb_debugging_line, "debugging-line",
 	_("DEBUGGING MODE and indicator 'D'"))
