@@ -158,6 +158,7 @@ odo-without-to:				ok # not verified yet
 padding-character-clause:		obsolete # not verified yet
 section-segments:			ignore # not verified yet
 stop-literal-statement:			obsolete # not verified yet
+stop-identifier-statement:		unconformable
 synchronized-clause:			ok # not verified yet
 top-level-occurs-clause:		ok # not verified yet
 value-of-clause:			obsolete # not verified yet
