@@ -158,6 +158,7 @@ odo-without-to:				unconformable
 padding-character-clause:		obsolete
 section-segments:			unconformable
 stop-literal-statement:			unconformable
+stop-identifier-statement:		unconformable
 synchronized-clause:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			unconformable
