@@ -158,6 +158,7 @@ odo-without-to:				unconformable
 padding-character-clause:		ok
 section-segments:			obsolete
 stop-literal-statement:			obsolete
+stop-identifier-statement:		unconformable
 synchronized-clause:			skip
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
