@@ -167,6 +167,7 @@ odo-without-to:				warning
 padding-character-clause:		obsolete
 section-segments:			ignore
 stop-literal-statement:			obsolete
+stop-identifier-statement:		obsolete
 synchronized-clause:			ok
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
