@@ -161,6 +161,7 @@ odo-without-to:				ok
 padding-character-clause:		obsolete
 section-segments:			ignore
 stop-literal-statement:			obsolete
+stop-identifier-statement:		unconformable
 synchronized-clause:			ok
 top-level-occurs-clause:		ok
 value-of-clause:			obsolete
