@@ -159,6 +159,7 @@ odo-without-to:				ok
 padding-character-clause:		obsolete
 section-segments:			ignore
 stop-literal-statement:			obsolete
+stop-identifier-statement:		unconformable
 synchronized-clause:			ok
 top-level-occurs-clause:		skip
 value-of-clause:			obsolete
